# musicbrainz_rust

./: Cargo.toml  rustfmt.toml
src/: client.rs  entities.rs  lib.rs
src/client/: mod.rs  search.rs
src/client/search/: entities.rs  fields.rs  mod.rs
src/entities/: .mod.rs.rustfmt  area.rs  artist.rs  date.rs  event.rs  label.rs  mbid.rs  mod.rs  recording.rs  refs.rs  release.rs  release_group.rs  xpath_reader.rs
