[package]
name = "musicbrainz"
version = "0.1.0"
authors = ["Leo Schwarz <mail@leoschwarz.com>"]

[dependencies]
error-chain = "0.10.0"
hyper = "0.10.9"
hyper-native-tls = "0.2.2"
native-tls = "0.1.2" # We only need this because `hyper-native-tls` doesn't reexport the error.
xpath_reader = "0.2.0"

[dependencies.uuid]
version = "0.5.0"
features = ["use_std"]

